[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "kedm"
version = "0.9.3"
authors = [
    { name="Keichi Takahashi", email="hello@keichi.dev" }
]
description = "A high-performance implementation of the Empirical Dynamic Modeling (EDM) framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0"
]

[project.urls]
Homepage = "https://github.com/keichi/kEDM"
Documentation = "https://kedm.readthedocs.io/"
Repository = "https://github.com/keichi/kEDM"
Issues = "https://github.com/keichi/kEDM/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0"
]

[tool.scikit-build]
wheel.install-dir = "kedm"
wheel.packages = ["python/kedm"]
cmake.version = ">=3.16"

[tool.scikit-build.cmake.define]
KEDM_ENABLE_PYTHON = true
KEDM_ENABLE_TESTS = false
KEDM_ENABLE_EXECUTABLES = false
KEDM_ENABLE_CPU = true
